open sockets to operations & transactions #6
