# src/routes/event_routes.js
@@ -1,26 +1,50 @@
 const express = require('express');
+const router = express.Router();
 const app_auth = require('../middlewares/app_auth');
 const session_verify = require('../middlewares/session_verify');
 const atsgo_auth = require('../middlewares/atsgo_auth');
-const Document = require('../models/Document');
 const response = require('../middlewares/response');
-const Reclamation = require('../models/Reclamation');
 const Operation = require('../models/Operation');
 const Acteur = require('../models/Acteur');
 const { Particulier } = require('../models/Client');
 
-const router = express.Router();
+router.get('/', (req, res, next) => {
+
+    console.log(`Ouverture du socket..`)
+
+    // Set headers to keep the connection alive and tell the client we're sending event-stream data
+    res.setHeader('Content-Type', 'text/event-stream');
+    res.setHeader('Cache-Control', 'no-cache');
+    res.setHeader('Connection', 'keep-alive');
+
+    // Send an initial message
+    res.write(`data: Connected to server\n\n`);
+
+    // Simulate sending updates from the server
+    let counter = 0;
+    const intervalId = setInterval(() => {
+        counter++;
+        // Write the event stream format
+        res.write(`data: Message ${counter}\n\n`);
+    }, 2000);
+
+    // When client closes connection, stop sending events
+    req.on('close', () => {
+        clearInterval(intervalId);
+        res.end();
+    });
+});
 
 router.get('/acteurs/operations', app_auth, session_verify, atsgo_auth, async (req, res, next) => {
 
-    console.log('Ouverture de socket d\'historique des opérations...')
-
-    const acteur_id = req.session.e_acteur;
+    console.log('Ouverture de socket: Historique des opérations..')
 
     res.setHeader('Content-Type', 'text/event-stream');
     res.setHeader('Cache-Control', 'no-cache');
     res.setHeader('Connection', 'keep-alive');
 
+    const acteur_id = req.session.e_acteur;
+    
     if (req.headers.op_code!='TYOP-003') return response(res, 403, `Type opération non authorisé !`); 
 
     console.log(`Recupération des données client`)
@@ -43,31 +67,37 @@ router.get('/acteurs/operations', app_auth, session_verify, atsgo_auth, async (r
                 .then(async data => {
                     if (data.status!=200) return response(res, 403, `Une erreur lors de la récupération des opération !`);
                     for(let payLoad of data.payLoad) delete payLoad.idClient;
-                    res.write(`data: ${JSON.stringify({statut: "SUCCESS", message: `Dernière récupération des opérations: ${new Date().toLocaleString()}`, data: data.payLoad})}`);
+                    res.write(`data: ${JSON.stringify({statut: "SUCCESS", message: `Dernière récupération des opérations: ${new Date().toLocaleString()}`, data: data.payLoad})}\n\n`);
+                    res.flushHeaders();
                     cur_operations = operations;
                 }).catch(err => next(err));
             }).catch(err=>next(err));
             
             // Chargement à un interval défini
             
-            setInterval(async () => {
-
+            const intervalId = setInterval(async () => {
                 await Operation.findAllByActeur(acteur_id).then(async operations => {
 
-                    if (operations.length > cur_operations.length) {
+                    if (operations.length > cur_operations.length || operations[operations.length-1].r_statut==0) {
                         await fetch(url)
-                        .then(async res => res.json())
-                        .then(async data => {
+                        .then(res => res.json())
+                        .then(data => {
                             if (data.status!=200) return response(res, 403, `Une erreur lors de la récupération des opération !`);
                             for(let payLoad of data.payLoad) delete payLoad.idClient;
-                            res.write(`data: ${JSON.stringify({statut: "SUCCESS", message: `Dernière récupération des opérations: ${new Date().toLocaleString()}`, data: data.payLoad})}`);
+                            res.write(`data: ${JSON.stringify({statut: "SUCCESS", message: `Dernière récupération des opérations: ${new Date().toLocaleString()}`, data: data.payLoad})}\n\n`);
+                            res.flushHeaders();
+                            if (cur_operations.length==0 || operations[operations.length-1].r_statut!=0) cur_operations = operations;
                         }).catch(err => next(err));
-
-                        if (cur_operations.length==0 || operations[operations.length-1].r_statut!=0) cur_operations = operations;
                     }
-                }).catch(err=>next(err));
 
+                }).catch(err=>next(err));
             }, 5000);
+
+            res.on('close', () => {
+                console.log(`Fermeture du socket: Historique des opérations`);
+                clearInterval(intervalId);
+                res.end();
+            })
 
         }).catch(err => next(err));
     }).catch(err => next(err));
@@ -76,13 +106,13 @@ router.get('/acteurs/operations', app_auth, session_verify, atsgo_auth, async (r
 
 router.get('/acteurs/transactions', app_auth, session_verify, atsgo_auth, async (req, res, next) => {
 
-    console.log('Ouverture de socket d\'historique des transactions...')
-
-    const acteur_id = req.session.e_acteur;
+    console.log('Ouverture de socket: Historique des transactions..')
     
     res.setHeader('Content-Type', 'text/event-stream');
     res.setHeader('Cache-Control', 'no-cache');
     res.setHeader('Connection', 'keep-alive');
+
+    const acteur_id = req.session.e_acteur;
 
     if (req.headers.op_code!='TYOP-003') return response(res, 403, `Type opération non authorisé !`);
     
@@ -105,30 +135,37 @@ router.get('/acteurs/transactions', app_auth, session_verify, atsgo_auth, async 
                 .then(async res => res.json())
                 .then(async data => {
                     if (data.status!=200) return response(res, 403, `Une erreur lors de la récupération des transactions !`);
-                    res.write(`data: ${JSON.stringify({statut: "SUCCESS", message: `Dernière récupération des transactions: ${new Date().toLocaleString()}`, data: data.payLoad})}`);
+                    res.write(`data: ${JSON.stringify({statut: "SUCCESS", message: `Dernière récupération des transactions: ${new Date().toLocaleString()}`, data: data.payLoad})}\n\n`);
+                    res.flushHeaders();
                     cur_operations = operations;
                 }).catch(err => next(err));
             }).catch(err => next(err));
 
             // Chargement à un interval défini
 
-            setInterval(async () => {
+            const intervalId = setInterval(async () => {
 
                 await Operation.findAllByActeur(acteur_id).then(async operations => {
 
-                    if (operations.length > cur_operations.length) {
+                    if (operations.length > cur_operations.length || operations[operations.length-1].r_statut==0) {
                         await fetch(url)
                         .then(async res => res.json())
                         .then(async data => {
                             if (data.status!=200) return response(res, 403, `Une erreur lors de la récupération des transactions !`);
-                            res.write(`data: ${JSON.stringify({statut: "SUCCESS", message: `Dernière récupération des transactions: ${new Date().toLocaleString()}`, data: data.payLoad})}`);
-                        }).catch(err => next(err));
-
-                        if (cur_operations.length==0 || operations[operations.length-1].r_statut!=0) cur_operations = operations;
+                            res.write(`data: ${JSON.stringify({statut: "SUCCESS", message: `Dernière récupération des transactions: ${new Date().toLocaleString()}`, data: data.payLoad})}\n\n`);
+                            res.flushHeaders();
+                            if (cur_operations.length==0 || operations[operations.length-1].r_statut!=0) cur_operations = operations;
+                        }).catch(err => next(err));                        
                     }
                 }).catch(err => next(err));
 
             }, 5000);
+
+            res.on('close', () => {
+                console.log(`Fermeture du socket: Historique des opérations`);
+                clearInterval(intervalId);
+                res.end();
+            })
 
         }).catch(err => next(err));
     }).catch(err => next(err));
