# swagger-outpout.json
@@ -3627,6 +3627,19 @@
         }
       }
     },
+    "/v1/events/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "text/event-stream"
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/v1/events/acteurs/operations": {
       "get": {
         "description": "",
